syntax = "proto3";

option csharp_namespace="Sooduskorv.HealthChecks";

package HealthChecks;
// Special file for handling health checks only from gRPC channels.
service Health {
	rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
	rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message HealthCheckRequest {
	string service = 1;
}

enum ServingStatus {
	UNKNOWN = 0;
	SERVING = 1;
	NOT_SERVING = 2;
	SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
}

message HealthCheckResponse {
	ServingStatus status = 1;
}